# python-starter

./: .env.example  .env.py.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  flake.nix  pyproject.toml
src/app/: entrypoint.sh
src/app/api/: main.py
src/app/core/: config.py
src/app/models/: __init__.py  base.py  item.py
src/app/worker/: celery_app.py  tasks.py
tests/: test_api.py
